# otel-example

./: .editorconfig  Cargo.toml  Makefile  README.md  clippy.toml
otel/: compose.yaml  docker-compose.yml  otel-collector-config.yml
src/: main.rs  run.rs
