[package]
name = "otel-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# opentelemetry = "0.18.0"
# opentelemetry-otlp = "0.11.0"
opentelemetry = { version = "*", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "*", features = ["grpc-tonic"] }
tokio = { version = "*", features = ["rt-multi-thread"] }
