[package]
name = "otel-test"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
opt-level = "s"

[dependencies]
anyhow = "1.0.82"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
